  * grep-excuses: permit requests to http://bjorn.haxx.se/debian/
    with --wipnity, -w option. Idea and implementation courtesy from
    Julian Mehnle <julian@mehnle.net>. (Closes: #448279)
  * bts:
     + add a -n/--no-action option printing emails to stdout instead
       of sending them. (Closes: #458603)
     + add a "SEE ALSO" section in manual page. (Closes: #458296)
  * dch:
     + add a --bin-nmu option for binNMUs. (Closes: #458496)
     + add a -s/--security option for Security Team uploads inspired by
       Ubuntu's.
  * debdiff: make diff output p1-compatible (for native packages or when
    interdiff is not available). Thanks dAniel hAhler for the patch.
    (Closes: #456223)
  * mass-bug: add --user and --usertags options to avoid their wrapping.
    (Closes: #429479)
  * chdist: generate a manual page from source.
  * Changes pulled from Ubuntu's diff:
     + debian/control:
        - suggest wget|curl instead of wget
        - suggest lsb-release
     + debuild: preserve DEBEMAIL environment variable.

  [ Adam D. Barratt ]
  * who-uploads: Actually check debian-keyring.pgp by default rather
    than .gpg twice. Thanks to Philipp Kern for pointing the issue out
    (Closes: #456209)
  * who-uploads: Check debian-maintainers.gpg by default. Thanks to
    Philipp Kern for the suggestion (Closes: #456208)
  * debian/control, README: Add debian-maintainers to the suggested
    package list
  * debchange: Add a configuration file option to allow overriding the
    default setting of -t / --mainttrailer (Closes: #454254, #453644)
  * debchange: Correctly handle using an empty changelog entry to switch
    the distribution to UNRELEASED when using the changelog heuristic
    (Closes: #453690)

  [ Luk Claes ]
  * chdist: Add bash_completion script for chdist (Closes: #457842)
  * chdist: Added improvements and fixed bugs. Thanks to Raphaël Pinson
    (Closes: #457841)

 -- Mohammed Adnène Trojette <adn+deb@diwi.org>  Wed, 02 Jan 2008 05:21:56 +0100
